# oscillate

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
src/oscillate/: __init__.py  cli.py  core.py  db.py  exceptions.py  ffmpeg.py  metrics.py  queue.py  track.py
src/oscillate/filters/: __init__.py  audio_8d.py  base.py  bass.py  eq.py  nightcore.py
src/oscillate/utils/: logging.py  typing.py
