[metadata]
name = oscillate
version = 1.0.0
author = rae1st
author_email = dev@rae1st.com
description = Production-grade Discord audio streaming package with advanced filters and queue management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rae1st/oscillate
project_urls =
    Bug Tracker = https://github.com/rae1st/oscillate/issues
    Documentation = https://github.com/rae1st/oscillate#readme
    Source Code = https://github.com/rae1st/oscillate
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    discord.py>=2.0.0
    aiosqlite>=0.17.0
    prometheus-client>=0.14.0
    click>=8.0.0
    pydantic>=1.10.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=22.0.0
    ruff>=0.0.261
    mypy>=1.0.0
    pre-commit>=2.20.0
docs =
    mkdocs>=1.4.0
    mkdocs-material>=8.5.0

[options.entry_points]
console_scripts =
    oscillate = oscillate.cli:main

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
